Fix for network selector overlapping menu

--- a/packages/frontend/src/components/layout/navbar/Navbar.scss
+++ b/packages/frontend/src/components/layout/navbar/Navbar.scss
@@ -25,6 +25,11 @@
     border: 1px solid rgba(255, 255, 255, .07);
   }
 
+  &__Burger {
+    position: relative;
+    z-index: 20;
+  }
+
   &__WrapperNetworkSelect {
     display: flex;
     align-items: center;
